--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
+//    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
 
@@ -78,13 +78,34 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.37"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
 
-    // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
+//    //DI
+//    implementation 'com.google.dagger:hilt-android:2.43.2'
+//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+//    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
-    // Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:2.3.0"
+//    // Room
+//    implementation "androidx.room:room-runtime:2.3.0"
+//    kapt "androidx.room:room-compiler:2.3.0"
+//
+//    // Kotlin Extensions and Coroutines support for Room
+//    implementation "androidx.room:room-ktx:2.3.0"
+
+
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+//
+//    //Icons
+//    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+
+
+    //Room
+    def room_version = "2.5.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
