--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,7 +47,6 @@ android {
         }
     }
 }
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -63,6 +62,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01"
 //    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
@@ -74,33 +75,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
     //Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.43.2"
-    kapt "com.google.dagger:hilt-android-compiler:2.37"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "com.google.dagger:hilt-android:2.43"
+    kapt "com.google.dagger:hilt-android-compiler:2.43"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-
-
-//    //DI
-//    implementation 'com.google.dagger:hilt-android:2.43.2'
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-//    kapt 'com.google.dagger:hilt-compiler:2.43.2'
-//    kapt "androidx.hilt:hilt-compiler:1.0.0"
-
-//    // Room
-//    implementation "androidx.room:room-runtime:2.3.0"
-//    kapt "androidx.room:room-compiler:2.3.0"
-//
-//    // Kotlin Extensions and Coroutines support for Room
-//    implementation "androidx.room:room-ktx:2.3.0"
-
-
-    //Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-//
-//    //Icons
-//    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
-
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     //Room
     def room_version = "2.5.1"
@@ -109,3 +87,4 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 }
+
